dataset1235/2025-2/1153765216/users/4261539586/executions/2747719322_2667036473.log
== SUBMISSION (2025-08-14 18:35:28)
-- CODE: 

kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:35:18)
-- CODE: 
celsius = input("digite uma temperatura: ")
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:37:03)
-- CODE: 
celsius = float(input("digite uma temperatura em celsius: "))

kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite uma temperatura em celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite uma temperatura em celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:35:25)
-- CODE: 

kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:35:27)
-- CODE: 

kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    kelvin = celsius + 273.15
             ^^^^^^^
NameError: name 'celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
